# 4dsuika

./: .gitignore  CMakeLists.txt  Info.plist  Makefile  README.md  build.bat  build.sh  build_sdl.sh  gen_tex.py  web_template.html
.github/workflows/: build.yml
.specstory/history/: 2025-06-29_23-09Z-build-game-for-multiple-platforms.md  2025-06-30_01-11Z-debugging-missing-data-file-issue.md  2025-06-30_06-39Z-webgl-shader-parameter-type-error.md
cmake/: windows_toolchain.cmake
includes/learnopengl/: filesystem.h  mesh.h  model.h  model_animation.h  shader.h
resources/models/: FlyingIsland.fbx  flyingIsland.glb
resources/models/flyingIsland/: flyingIsland.mtl
resources/models/skyisland/: skyisland.mtl
resources/shaders/: background_web.fs  background_web.vs  pbr.fs  pbr.vs  pbr_web.fs  pbr_web.vs  text_2d_web.fs
src/4d_game/: ballrenderer.hpp  boundary.hpp  filesystem.h  game copy.hpp  game.hpp  globals.h  hemisphere_boundary.hpp  main.cpp  physics_solver.hpp  render_helper.hpp  shape.hpp  state_helper.hpp  text_renderer.cpp  text_renderer.h
src/7.in_practice/3.2d_game/0.full_source/: game.cpp
src/9.4d_game/: 2.2.2.pbr.fs  ballrenderer.hpp  boundary.hpp  fruit.hpp  game.cpp  game.h  game.hpp  globals.h  helper.hpp  hemisphere_boundary.hpp  hemisphere_renderer.hpp  main.cpp  main.htm  physics_object.hpp  physics_solver.hpp  render_helper.hpp  resource_manager.cpp  shader.cpp  shape.hpp  state_helper.hpp  text_renderer.cpp  text_renderer.h  threadpool.hpp
